# picoro

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE-3rdparty.md  LICENSE.md  README.md
examples/co2-server/: CMakeLists.txt  README.md  co2-server.cpp  lwipopts.h  picoro  secrets.h
examples/fridge-monitor/: CMakeLists.txt  README.md  fridge-monitor.cpp
include/picoro/: coroutine.h  debug.h  event_loop.h  sleep.h  tcp.h
include/picoro/drivers/: dht22.h  dht22.pio  scd4x.h
include/picoro/drivers/sensirion/: i2c.h  scd4x.h  sht3x.h
